syntax = "proto3";

package backend_service_catalog;

option csharp_namespace = "Crib2023.Grpc.Backend.Services.Catalog";

import "backend_service_catalog.proto";

service CatalogTopicService {
  rpc GetItem (CatalogTopicItemGetOperationRequest) returns (CatalogTopicItemGetOperationReply);
  rpc GetList (CatalogTopicListGetOperationRequest) returns (CatalogTopicListGetOperationReply);
  rpc GetTree (CatalogTopicTreeGetOperationRequest) returns (CatalogTopicTreeGetOperationReply);
}

// GetItem Request

message CatalogTopicItemGetOperationRequest {
  CatalogTopicItemGetOperationInput input = 1;
  string operation_code = 2;
}

message CatalogTopicItemGetOperationInput {
  string axis = 1;
  int64 id = 2;
  string name = 3;
  int64 parent_id = 4;  
}

// GetItem Reply

message CatalogTopicItemGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  CatalogTopicItemGetOperationOutput output = 4;
  repeated CatalogInvalidInputProperty invalid_input_properties = 5;
}

message CatalogTopicItemGetOperationOutput {
  CatalogTopicEntityForItem item = 1;
}

message CatalogTopicEntityForItem {
  CatalogTopicTypeEntity data = 1;
  repeated CatalogOptionValueObject tree_ancestors = 2;
  bool tree_has_children = 3;
  bool tree_is_expanded = 4;
  int32 tree_level = 5;
  string tree_path = 6;  
}

message CatalogTopicTypeEntity {
  int64 id = 1;
  string name = 2;
  int64 parent_id = 3;
  string row_guid = 4;
}

// GetList Request

message CatalogTopicListGetOperationRequest {
  CatalogTopicListGetOperationInput input = 1;
  string operation_code = 2;
}

message CatalogTopicListGetOperationInput {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_field = 3;
  string sort_direction = 4;
  string axis = 5;
  int64 expanded_node_id = 6;
  repeated int64 expanded_node_ids = 7;
  string expanded_node_ids_string = 8;
  int64 root_node_id = 9;
  string root_node_tree_path = 10;
  repeated int64 ids = 11;
  string ids_string = 12;
  string name = 13;
}

// GetList Reply

message CatalogTopicListGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  CatalogTopicListGetOperationOutput output = 4;
  repeated CatalogInvalidInputProperty invalid_input_properties = 5;
}

message CatalogTopicListGetOperationOutput {
  repeated CatalogTopicEntityForItem items = 1;
  int64 total_count = 2;
}

// GetTree Request

message CatalogTopicTreeGetOperationRequest {
  CatalogTopicTreeGetOperationInput input = 1;
  string operation_code = 2;
}

message CatalogTopicTreeGetOperationInput {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_field = 3;
  string sort_direction = 4;
  string axis = 5;
  int64 expanded_node_id = 6;
  repeated int64 expanded_node_ids = 7;
  string expanded_node_ids_string = 8;
  int64 root_node_id = 9;
  string root_node_tree_path = 10;
}

// GetTree Reply

message CatalogTopicTreeGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  CatalogTopicTreeGetOperationOutput output = 4;
  repeated CatalogInvalidInputProperty invalid_input_properties = 5;
}

message CatalogTopicTreeGetOperationOutput {
  repeated CatalogTopicEntityForTree nodes = 1;
  int64 total_count = 2;
}

message CatalogTopicEntityForTree {
  CatalogTopicTypeEntity data = 1;
  repeated CatalogTopicEntityForTree tree_children = 2;
  bool tree_has_children = 3;
  bool tree_is_expanded = 4;
  int32 tree_level = 5;
  string tree_path = 6;  
}
